DDD News						-*- text -*-
********

DDD 3.3.1
=========

Minor bug fixes:

* The option to create new displays `left-to-right' is restored upon startup.
* Fortran struct members are accessed as `A%B' instead of `A.B'.
* Minor compilation problems with GCC 2.7.2 and Sun CC are fixed.
* `config.guess' and `config.sub' scripts have been updated.



DDD 3.3
=======

DDD 3.3 brings data themes, debugger interaction while the program is
running, support for JDB 1.2, and several bug fixes.


Data Themes
-----------

- DDD supports _data themes_ - modifiers that change the appearance of 
  program data.  Try `Data->Themes'.

- Data themes included with this release are:
  * Show specific expressions in a smaller font (useful for arrays).
  * Show display titles in a smaller font.
  * Suppress specific structure members or expressions.

- New data themes can be defined by users and installed at run-time.

- More themes are in preparation, such as rendering of C++ STL data structures.


Debuggers and Languages
-----------------------

- JDB as of JDK 1.2 is supported.

- GDB 5.0 is supported.

- You can use `ddd --wdb' to have DDD startup with WDB.  

- When choosing a debugger automatically, DDD will try `wdb' if `gdb'
  is not available.

- WindRiver's version of GDB (within the Tornado/vxworks environment)
  is supported.  See the DDD Reference, Section `WindRiver GDB' for
  details. (5)

- SGI DBX, Sun DBX, other DBXes as well as Compaq Ladebug can now
  attach to processes via DDD. (1)

- Parsing of GDB breakpoint information has been improved. (2)

- Parsing of Perl breakpoint information has been improved.

- Perl hash keys containing spaces are supported. (8)

- Using the separate execution window now improves parsing debugger
  output.  See the DDD documentation for the new `bufferGDBOutput'
  resource.


Examining Data
--------------

- New displays can be created left-to-right.  
  See `Edit => Preferences => Data => Placement'.  (6)
